<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tela3">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txvDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dados_pessoais" />

        <TextView
            android:id="@+id/txvNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <TextView
            android:id="@+id/txvIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idade" />

        <TextView
            android:id="@+id/txvSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexo" />

        <TextView
            android:id="@+id/txvCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpf" />

        <TextView
            android:id="@+id/txvDataDeNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/txvEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/endereco" />

        <TextView
            android:id="@+id/txvLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logradouro" />

        <TextView
            android:id="@+id/txvNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numero" />

        <TextView
            android:id="@+id/txvComplemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complemento" />

        <TextView
            android:id="@+id/txvCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cidade" />

        <TextView
            android:id="@+id/txvEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estado" />

        <TextView
            android:id="@+id/txvPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pais" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <EditText
            android:id="@+id/profissao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/profiss_o"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cargo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cargo"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/salario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sal_rio"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/dataDeAdmissao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/data_de_admiss_o"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/regimeDeContratacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/regime_de_contrata_o"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/empresa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/empresa"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txvLotacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lota_o" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSeguinte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/seguinte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>